:bug: Consertar overflow da parte de Qualidades

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,7 @@ img {
 
 .qualidade {
     padding: 40px 0;
+    overflow: auto;
 }
 
 .qualidade:after {
